[package]
name = "yaml2json-bin"
description = "Utility to convert YAML files to JSON"
version = "0.1.1"
authors = ["Nathan Essex <nathan@essex.id.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
anyhow = "1.0.34"
yaml-split = { path = "../yaml-split" }
yaml2json = { path = "../yaml2json" }
