[package]
name = "yaml2json-rs-bin"
description = "Command line utility to convert YAML files to JSON."
version = "0.4.0"
authors = ["Nathan Essex <nathan@essex.id.au>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Nessex/yaml2json-rs"
homepage = "https://github.com/Nessex/yaml2json-rs"
categories = ["command-line-utilities", "encoding"]
keywords = ["yaml", "json"]
documentation = "https://docs.rs/yaml2json-rs/"
readme = "../../README.md"

[[bin]]
name = "yaml2json"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.15", features = ["cargo","derive"] }
anyhow = "1.0.65"
yaml-split = { path = "../yaml-split", version = "=0.4.0" }
yaml2json-rs = { path = "../yaml2json-rs", version = "=0.4.0" }
