[package]
name = "yaml2json-rs"
description = "Convert YAML documents to JSON"
version = "0.4.0"
authors = ["Nathan Essex <nathan@essex.id.au>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Nessex/yaml2json-rs"
homepage = "https://github.com/Nessex/yaml2json-rs/blob/master/crates/yaml2json-rs"
categories = ["encoding"]
keywords = ["yaml", "json"]
documentation = "https://docs.rs/yaml2json-rs/"

[dependencies]
serde = "1.0.144"
serde_json = "1.0.85"
serde_yaml = "0.9.13"
thiserror = "1.0.36"
